rigid core changes

--- a/builtForEveryday.html
+++ b/builtForEveryday.html
@@ -14,14 +14,31 @@
                         <img src="/public/logo.png" alt="Evolux Logo">
                     </a>
 
-                    <nav class="navegacion a-negro">
-                        <a>Evolux Collections</a>
-                        <a href="engineered.html">Engineered Wood - Special Order</a>
-                        <a href="builtForEveryday.html">Feature & benefits</a>
-                        <a href="checkStock.html">Check Stock</a>
-                        <a href="installation.html">Installation & Care</a>
-                        <a href="roomScenes.html">Room scenes</a>
-                        <a href="collectionVideos.html">Collection videos</a>
+                    <nav class="navegacion">
+                        <div class="dropdown-menu">
+                            <a style="color: var(--negro);" href="#" class="dropdown-trigger">Evolux Collections</a>
+                            <div class="dropdown-content">
+                                <div class="dropdown-container">
+                                    <div class="dropdown-section">
+                                        <a href="glueDown.html"><h3>Glue Down Collections</h3></a>
+                                        <a href="lotus.html">Lotus</a>
+                                        <a href="powell.html">Powell</a>
+                                    </div>
+                                    <div class="dropdown-section">
+                                        <a href="rigidCore.html"><h3>Rigid Core Collections</h3></a>
+                                        <a href="fume2.html">Fume</a>
+                                        <a href="iris.html">Iris</a>
+                                        <a href="apres.html">Apres</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a style="color: var(--negro);" href="engineered.html">Engineered Wood - Special Order</a>
+                        <a style="color: var(--negro);"  href="builtForEveryday.html">Feature & benefits</a>
+                        <a style="color: var(--negro);"  href="checkStock.html">Check Stock</a>
+                        <a style="color: var(--negro);"  href="installation.html">Installation & Care</a>
+                        <a style="color: var(--negro);"  href="roomScenes.html">Room scenes</a>
+                        <a style="color: var(--negro);"  href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -37,7 +54,7 @@
 
             <div class="contenedor-spc">
                 <div class="spc-click">
-                    <h1>SPC Click</h1>
+                    <h1>Rigid Core</h1>
                     <p class="toggle-feature">Interlocking installation system <img class="toggle-feature-arrow" src="/public/flecha_up.png" alt="flecha_up"></p>
                     <p class="toggle-feature-desc">Features a locking mechanism that allows the tiles or<br>planks to be clicked together during installation</p>
                     <hr class="line">
