--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
                     </a>
 
                     <nav class="navegacion">
-                        <a>Evolux Collections</a>
+                        <div class="dropdown-menu">
+                            <a href="#" class="dropdown-trigger">Evolux Collections</a>
+                            <div class="dropdown-content">
+                                <div class="dropdown-container">
+                                    <div class="dropdown-section">
+                                        <a href="glueDown.html"><h3>Glue Down Collections</h3></a>
+                                        <a href="lotus.html">Lotus</a>
+                                        <a href="powell.html">Powell</a>
+                                    </div>
+                                    <div class="dropdown-section">
+                                        <a href="rigidCore.html"><h3>Rigid Core Collections</h3></a>
+                                        <a href="fume2.html">Fume</a>
+                                        <a href="iris.html">Iris</a>
+                                        <a href="apres.html">Apres</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <a href="engineered.html">Engineered Wood - Special Order</a>
                         <a href="builtForEveryday.html">Feature & benefits</a>
                         <a href="checkStock.html">Check Stock</a>
@@ -77,11 +94,11 @@
                         <img src="/public/image_2.png" alt="Imagen de referencia1">
                         <div class="texto-image">
                             <div>
-                                <h1>SPC Click</h1>
+                                <h1>Rigid Core</h1>
                                 <p>Collections</p>
                             </div>
                             <div>
-                                    <button class="btn-flecha" onclick="window.location.href='spc.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                                    <button class="btn-flecha" onclick="window.location.href='rigidCore.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                             </div>
                         </div>
                     </div>
