--- a/rigidCore.html
+++ b/rigidCore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
-    <title>SPC</title>
+    <title>Rigid Core</title>
 </head>
 <body>
     <header class="header-secundario">
@@ -14,20 +14,37 @@
                         <img src="/public/logo.png" alt="Evolux Logo">
                     </a>
 
-                    <nav class="navegacion a-negro">
-                        <a>Evolux Collections</a>
-                        <a href="engineered.html">Engineered Wood - Special Order</a>
-                        <a href="builtForEveryday.html">Feature & benefits</a>
-                        <a href="checkStock.html">Check Stock</a>
-                        <a href="installation.html">Installation & Care</a>
-                        <a href="roomScenes.html">Room scenes</a>
-                        <a href="collectionVideos.html">Collection videos</a>
+                    <nav class="navegacion">
+                        <div class="dropdown-menu">
+                            <a style="color: var(--negro);" href="#" class="dropdown-trigger">Evolux Collections</a>
+                            <div class="dropdown-content">
+                                <div class="dropdown-container">
+                                    <div class="dropdown-section">
+                                        <a href="glueDown.html"><h3>Glue Down Collections</h3></a>
+                                        <a href="lotus.html">Lotus</a>
+                                        <a href="powell.html">Powell</a>
+                                    </div>
+                                    <div class="dropdown-section">
+                                        <a href="rigidCore.html"><h3>Rigid Core Collections</h3></a>
+                                        <a href="fume2.html">Fume</a>
+                                        <a href="iris.html">Iris</a>
+                                        <a href="apres.html">Apres</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a style="color: var(--negro);" href="engineered.html">Engineered Wood - Special Order</a>
+                        <a style="color: var(--negro);"  href="builtForEveryday.html">Feature & benefits</a>
+                        <a style="color: var(--negro);"  href="checkStock.html">Check Stock</a>
+                        <a style="color: var(--negro);"  href="installation.html">Installation & Care</a>
+                        <a style="color: var(--negro);"  href="roomScenes.html">Room scenes</a>
+                        <a style="color: var(--negro);"  href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
 
             <div class="contenedor-principal padding-corto">
-                <h1 class="short-line-height">SPC</h1>
+                <h1 class="short-line-height">Rigid Core</h1>
                 <h2>Collections</h2>
                 <p class="light">Featuring a rigid core and built-in underlayment, they provide excellent stability, sound insulation,<br>and comfort underfoot. The click-lock system allows for quick, glue-free installation, ideal for<br>residential spaces and light commercial settings</p>
             </div>    
